<resources>
    <!--
   * Drug App
   * https://github.com/quintuslabs/GroceryStore
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
    <string name="app_name">Smart Pharma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_text">Please verify your email using OTP send to your register email</string>
    <string name="verify_otp">Verify OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? <font color="#FF4081"> Sign Up here</font></string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? <font color="#FF4081"> Login here</font></string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="action_Cart">Cart</string>
    <string name="registered_mobile_number">Please Enter Register Mobile Number</string>
    <string name="reset_code">Reset Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend_code">Resend Code</string>
    <string name="order_item_details">Your Order Details</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="cancel">Cancel</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_profile_image">Upload Prescription</string>

    <string name="launch_file_picker">Launch File Picker</string>

    <string name="uri">Uri : %1$s</string>
    <string name="size">Size :  %1$d</string>
    <string name="mime">Mime: %1$s</string>
    <string name="type">Type : %1$d</string>
    <string name="name">Name : %1$s</string>
    <string name="bucketname">BucketName : %1$s</string>
    <string name="launch_audio_picker">Launch audio picker</string>
    <string name="launch_video_picker">Launch video picker</string>
    <string name="launch_image_picker">Launch image picker</string>

    <string name="file_thumbnail">File Thumbnail</string>
    <string name="open_camera">Open Camera</string>
    <string name="done">Done</string>
    <string name="selection_count_title">%3$s (%1$d/%2$d)</string>
    <string name="selection_count">%1$d/%2$d</string>
    <string name="permission_not_given">Permission not given</string>
</resources>
