<?xml version="1.0" encoding="utf-8"?><!--
   * Drug App
   * https://github.com/quintuslabs/GroceryStore
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/forgetpasswordmedico"
    android:padding="20dp">

    <com.frontendsource.drugstore.customfonts.TextViewRegular
        android:id="@+id/textViewRegular"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/registered_mobile_number"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.frontendsource.drugstore.customfonts.TextViewRegular
        android:id="@+id/textViewRegular2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/registered_mobile_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegular" />

    <FrameLayout
        android:id="@+id/forgot_passwordFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegular2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/_18dp"
                android:text="Mobile Number"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/registered_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/editbg"
                    android:digits="0123456789"
                    android:drawablePadding="8dp"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="18dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.frontendsource.drugstore.customfonts.TextViewRegular
                    android:id="@+id/backToLoginBtn"
                    android:layout_width="120dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="12dp"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/editbg"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_left_arrow"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.frontendsource.drugstore.customfonts.TextViewRegular
                    android:id="@+id/forgot_button"
                    android:layout_width="120dp"
                    android:layout_height="46dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/editbg"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_left_arrow"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/reset_password_FL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/otp_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/reset_code"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/passsword_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/conf_passsword_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.frontendsource.drugstore.customfonts.TextViewRegular
                    android:id="@+id/resend_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="5dp"
                    android:text="@string/resend_code"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.frontendsource.drugstore.customfonts.TextViewRegular
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/reset_password"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

    </FrameLayout>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progressbar"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>