<?xml version="1.0" encoding="utf-8"?><!--
   * Drug App
   * https://github.com/quintuslabs/GroceryStore
   * Created on 18-Feb-2019.
   * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/medicosignuo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.frontendsource.drugstore.customfonts.TextViewBold
                android:id="@+id/textViewBold2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="SmartPharma"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/mediclogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBold2" />

            <com.frontendsource.drugstore.customfonts.TextViewBold
                android:id="@+id/textViewBold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:padding="20dp"
                android:text="Registeration "
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBold">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_marginTop="@dimen/_18dp"
                    android:layout_marginLeft="8dp"
                    android:text="Full name"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:boxBackgroundMode="outline"
                    android:gravity="bottom">

                    <EditText
                        android:id="@+id/fullName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/editbg"
                        android:digits="abcdefghijklmnopqrstuvwxyz . ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:drawablePadding="8dp"
                        android:gravity="bottom"
                        android:inputType="textCapWords"
                        android:padding="18dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--    <com.google.android.material.textfield.TextInputLayout-->
                <!--        android:layout_width="match_parent"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:layout_marginTop="7dp">-->

                <!--        <EditText-->
                <!--            android:id="@+id/userEmailId"-->
                <!--            android:layout_width="fill_parent"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:layout_marginTop="5dp"-->
                <!--            android:background="@android:color/transparent"-->
                <!--            android:drawablePadding="8dp"-->
                <!--            android:gravity="center_vertical"-->
                <!--            android:hint="@string/email"-->
                <!--            android:inputType="textEmailAddress"-->
                <!--            android:padding="10dp"-->
                <!--            android:singleLine="true"-->
                <!--            android:textColor="@color/text_color"-->
                <!--            android:textColorHint="@color/colorPrimary"-->
                <!--            android:textSize="16sp" />-->
                <!--    </com.google.android.material.textfield.TextInputLayout>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Mobile Number"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:gravity="bottom">

                    <EditText
                        android:id="@+id/mobileNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/editbg"
                        android:digits="0123456789"
                        android:drawablePadding="8dp"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="18dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Password"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"

                    android:gravity="bottom"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/editbg"
                        android:drawablePadding="8dp"
                        android:inputType="textPassword"
                        android:padding="18dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="17dp"
                    android:layout_gravity="center"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/editbg"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="3dp"
                    android:text="@string/signUp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/already_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/already_user"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <include
                android:id="@+id/progress_bar"
                layout="@layout/progressbar"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>